# experiments

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  README.md  linker.ld  rust-toolchain.toml  x86_64-rustos.json
.cargo/: config.toml
docs/: README.md
docs/design/: kernel-user-interaction-alternatives.md  rust-os-design.md
src/: capability.rs  examples.rs  hypervisor.rs  io.rs  main.rs  memory.rs  process.rs
